@@ -952,11 +952,9 @@ name|T
 name|value
 parameter_list|)
 block|{
-return|return
-name|_add
-argument_list|(
-name|key
-argument_list|,
+name|String
+name|escapedString
+init|=
 name|StringUtils
 operator|.
 name|escapeString
@@ -974,6 +972,27 @@ name|ESCAPE_CHAR
 argument_list|,
 name|charsToEscape
 argument_list|)
+operator|.
+name|replaceAll
+argument_list|(
+literal|"\n"
+argument_list|,
+literal|"\\\\n"
+argument_list|)
+operator|.
+name|replaceAll
+argument_list|(
+literal|"\r"
+argument_list|,
+literal|"\\\\r"
+argument_list|)
+decl_stmt|;
+return|return
+name|_add
+argument_list|(
+name|key
+argument_list|,
+name|escapedString
 argument_list|)
 return|;
 block|}
