@@ -21,6 +21,54 @@ package|;
 end_package
 
 begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|resourcemanager
+operator|.
+name|rmapp
+operator|.
+name|RMAppImpl
+import|;
+end_import
+
+begin_import
 import|import static
 name|org
 operator|.
@@ -726,6 +774,20 @@ specifier|public
 class|class
 name|TestAppManager
 block|{
+DECL|field|LOG
+specifier|private
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|TestAppManager
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 DECL|field|appEventType
 specifier|private
 specifier|static
@@ -3684,6 +3746,216 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|30000
+argument_list|)
+DECL|method|testEscapeApplicationSummary ()
+specifier|public
+name|void
+name|testEscapeApplicationSummary
+parameter_list|()
+block|{
+name|RMApp
+name|app
+init|=
+name|mock
+argument_list|(
+name|RMAppImpl
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|app
+operator|.
+name|getApplicationId
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|ApplicationId
+operator|.
+name|newInstance
+argument_list|(
+literal|100L
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|app
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+literal|"Multiline\n\n\r\rAppName"
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|app
+operator|.
+name|getUser
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+literal|"Multiline\n\n\r\rUserName"
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|app
+operator|.
+name|getQueue
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+literal|"Multiline\n\n\r\rQueueName"
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|app
+operator|.
+name|getState
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|RMAppState
+operator|.
+name|RUNNING
+argument_list|)
+expr_stmt|;
+name|RMAppManager
+operator|.
+name|ApplicationSummary
+operator|.
+name|SummaryBuilder
+name|summary
+init|=
+operator|new
+name|RMAppManager
+operator|.
+name|ApplicationSummary
+argument_list|()
+operator|.
+name|createAppSummary
+argument_list|(
+name|app
+argument_list|)
+decl_stmt|;
+name|String
+name|msg
+init|=
+name|summary
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"summary: "
+operator|+
+name|msg
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertFalse
+argument_list|(
+name|msg
+operator|.
+name|contains
+argument_list|(
+literal|"\n"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertFalse
+argument_list|(
+name|msg
+operator|.
+name|contains
+argument_list|(
+literal|"\r"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|String
+name|escaped
+init|=
+literal|"\\n\\n\\r\\r"
+decl_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|msg
+operator|.
+name|contains
+argument_list|(
+literal|"Multiline"
+operator|+
+name|escaped
+operator|+
+literal|"AppName"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|msg
+operator|.
+name|contains
+argument_list|(
+literal|"Multiline"
+operator|+
+name|escaped
+operator|+
+literal|"UserName"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|msg
+operator|.
+name|contains
+argument_list|(
+literal|"Multiline"
+operator|+
+name|escaped
+operator|+
+literal|"QueueName"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|mockResourceScheduler ()
 specifier|private
